# gst-openhevc

./: .gitignore  Makefile.am  README.md  configure.ac  meson.build
ext/: Makefile.am
ext/openhevc/: Makefile.am  gstopenhevc.c  gstopenhevc.h  gstopenhevcviddec.c  gstopenhevcviddec.h  meson.build
